syntax = "proto3";
package secwager;
option java_package = "com.secwager.proto.cashier";


enum CashierActionResult {
  RESULT_UNSET = 0;
  SUCCESS = 1;
  FAILURE_INSUFFICIENT_FUNDS = 2;
  FAILURE_USER_NOT_FOUND = 3;
  FAILURE_FRIEND_NOT_FOUND = 4;
  FAILURE_INVALID_PAY_TO_ADDRESS = 5;
}

message UserAmount {
  string user_id = 1;
  uint32 amount = 2;
}

message DepositRequest {
  string user_id = 1;
  uint32 amount = 2;
}

message LockFundsResponse {
  CashierActionResult result = 1;
  Balance balance = 2;
}

message UnlockFundsResponse {
  CashierActionResult result = 1;
  Balance balance = 2;
}

message WithdrawalRequest {
  string user_id = 1;
  uint32 amount = 2;
  string pay_to_address = 3;
}

message WithdrawalResponse {
  CashierActionResult result = 1;
  string txn_hash = 2;
}

message DepositResponse {
  CashierActionResult result = 1;
}


message BalanceRequest {
  string user_id = 1;
}

message Balance {
  int32 available_balance = 1;
  int32 escrowed_balance = 2;
}

service Cashier {
  rpc LockFunds (UserAmount) returns (LockFundsResponse);
  rpc UnlockFunds (UserAmount) returns (UnlockFundsResponse);
  rpc DepositRisky (DepositRequest) returns (DepositResponse);
  rpc DepositSafe (DepositRequest) returns (DepositResponse);
  rpc GetBalance (BalanceRequest) returns (stream Balance);
  rpc Withdrawal (WithdrawalRequest) returns (WithdrawalResponse);

}


